# KhmerDoc-Ai

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.sample  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/routes/: documents.py  health.py
backend/app/core/: config.py  exceptions.py  lifespan.py
backend/app/schemas/: document.py  extraction.py  layout.py
backend/app/services/: document_store.py  extraction_pipeline.py  extraction_service.py  kiri_ocr_service.py  layout_service.py  nextocr_service.py  nextspell_service.py  ocr_pipeline.py
backend/app/utils/: files.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/evaluation/: page.tsx
frontend/src/components/: DocumentPreview.tsx  ErrorMessage.tsx  ExtractionJsonPanel.tsx  FileUpload.tsx  LayoutOverlay.tsx  LayoutRegionList.tsx  LoadingState.tsx  OcrTextPanel.tsx
frontend/src/lib/: api.ts  types.ts
