[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "kiri-ocr>=0.2.15",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
]
